# BakeryCanvas

./: .clang-format  .gitignore  BakeryCanvas.sln  CMakeLists.txt  Readme.md  cmake-variants.json
BakeryCanvas/: BakeryCanvas.vcxproj  BakeryCanvas.vcxproj.filters  Bind_GL.cpp  Bind_GL.h  GL.cpp  GL.h  GLfix.cpp  canvas2d.cpp  canvas2d.h  cpp.hint  env.cc  env.h  glad.cpp  logger.h  main.cpp  nan.h  system.cpp  system.h  translator.cpp  translator.h
BakeryCanvas/2d/: CanvasGradient.cc  CanvasGradient.h  CanvasPattern.cc  CanvasPattern.h  CanvasRenderingContext2d.cpp  CanvasRenderingContext2d.h  ImageData.h  Point.h  Util.h  color.cpp  color.h
BakeryCanvas/2d/backend/: Backend.cpp  Backend.h  ImageBackend.cpp
BakeryCanvas/imagedecoder/: imagedecoder.cc  imagedecoder.h
BakeryCanvas/include/: glibconfig.h
BakeryCanvas/include/glad/: glad.h
BakeryCanvas/include/spdlog/: async_logger.h  spdlog.h
BakeryCanvas/include/spdlog/details/: registry-inl.h
BakeryCanvas/include/spdlog/sinks/: stdout_color_sinks-inl.h
BakeryCanvas/internals/: bind.cpp  bind.h  log.cpp  log.h  settimeout.cpp  settimeout.h
BakeryCanvas/jsinternals/: bakery.cpp  bakery.h  bind.cpp  bind.h  canvas.cpp  canvas.h  image.cpp  image.h  internals.js  log.cpp  log.h  readme.md  requestanimationframe.cpp  requestanimationframe.h  settimeout.cpp  settimeout.h
BakeryCanvas/nan/: nan.h
BakeryCanvas/queue/: queue.cpp  queue.h
BakeryCanvas/utils/: color.cc  color.h  parse_font.cc  parse_font.h
BakeryCanvas/v8pp/: convert.hpp  throw_ex.hpp  throw_ex.ipp
test/fixtures/: context2d.js  cycle.js  eventloop.js  hello.js  image.js  log.js  test.frag  test.vert  triangle.js
test/fixtures/multifiles/: b.js  entry.json
test/fixtures/simple-webgl/: COPYRIGHT  webgl-demo.js
test/fixtures/webgl-blob/: entry.json  getShader.js  immediate_sim.js  index.js  marching_cubes.js  marching_cubes_tables.js  webgl-debug.js
test/fixtures/webgl-blob/tdl/: base.js  programs.js
test/fixtures/webgl-texture/: entry.json  webgl-demo.js
